# entropy

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: eta_exact.json
experiments/validation/fractals/: cantor_test.py
experiments/validation/generic/: uniform_noise_test.py
experiments/validation/smooth/: circle_test.py
src/algorithms/: extensive_cardinality.py
src/core/: granular.py  vr_signature.py
src/geometric_entropy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_extensive_cardinality.py  test_granular.py  test_vr_signature.py
